footer fixed pochti

--- a/project/main.html
+++ b/project/main.html
@@ -21,160 +21,162 @@
   			<a href="pendant.html" >Necklaces</a>
   		</div>
   	</header>
-  	<div class="last">
-  		<div class="card">
-  			<img src="img/pendant1.jpg">
-  			<a href="pendant1.html">HAPPY DIAMONDS ICONS PENDANT</a>
-  			<p>18-CARAT WHITE GOLD AND NATURAL MOTHER-OF-PEARL</p>
-  		</div>
-  		<div class="card">
-  			<img src="img/ring1.jpg">
-  			<a href="ring1.html">HAPPY DIAMONDS ICONS RING</a>
-  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-  		</div>
-  		<div class="card">
-  			<img src="img/earring1.jpg">
-  			<a href="earring1.html">HAPPY DIAMONDS ICONS EAR PINS</a>
-  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-  		</div>
-  		<div class="card">
-  			<img src="img/bracelet1.jpg">
-  			<a href="bracelet1.html">HAPPY DIAMONDS ICONS BRACELET</a>
-  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-  		</div>
-  		<div class="card">
-  			<img src="img/watch1.jpg">
-  			<a href="watch1.html">IMPERIALE "LA VIE EN ROSE"</a>
-  			<p>STAINLESS STEEL AND AMETHYST LIMITED EDITION</p>
-  		</div>
-  	</div>
-  	<hr>
-  	<div class="inf">
-  		<a href = "ring.html">RINGS</a>
-  		<h2>Our rings promise timeless elegance with a contemporary twist. Indulge in our selection of gold and diamond rings from various collections such as Chopardissimo, IMPERIALE or Happy Diamonds and find your very own favourite jewellery piece.</h2>
-  	</div>
-  	<div class="rings">
-  		<div class="card">
-  			<img src="img/ring1.jpg">
-  			<a href="ring1.html">HAPPY DIAMONDS ICONS PENDANT</a>
-  			<p>18-CARAT WHITE GOLD AND NATURAL MOTHER-OF-PEARL</p>
-  		</div>
-  		<div class="card">
-  			<img src="img/ring2.jpg">
-  			<a href="ring2.html">HAPPY DIAMONDS ICONS RING</a>
-  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-  		</div>
-  		<div class="card">
-  			<img src="img/ring3.jpg">
-  			<a href="ring3.html">HAPPY DIAMONDS ICONS EAR PINS</a>
-  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-  		</div>
-  		<div class="card">
-  			<img src="img/ring4.jpg">
-  			<a href="ring4.html">HAPPY DIAMONDS ICONS BRACELET</a>
-  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-  		</div>
-  		<div class="card">
-  			<img src="img/ring5.jpg">
-  			<a href="ring5.html">IMPERIALE "LA VIE EN ROSE"</a>
-  			<p>STAINLESS STEEL AND AMETHYST LIMITED EDITION</p>
-  		</div>
-  	</div>
-  	<hr>
-  	<div class="inf">
-  		<a href="earring.html">EARRINGS</a>
-  		<h2>From the tenderness of rose gold to the understated elegance of white gold, find below a selection of luxury jewellery that leaves no wish unfulfilled. Browse through Chopard's selection of prestigious earrings that come in different shapes and sizes to perfectly complement your style..<h2>
-  	</div>
-  	<div class="earrings">
-  		<div class="card">
-  			<img src="img/earring1.jpg">
-  			<a href="earring1.html">HAPPY DIAMONDS ICONS PENDANT</a>
-  			<p>18-CARAT WHITE GOLD AND NATURAL MOTHER-OF-PEARL</p>
-  		</div>
-  		<div class="card">
-  			<img src="img/earring2.jpg">
-  			<a href="earring2.html">HAPPY DIAMONDS ICONS RING</a>
-  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-  		</div>
-  		<div class="card">
-  			<img src="img/earring3.jpg">
-  			<a href="earring3.html">HAPPY DIAMONDS ICONS EAR PINS</a>
-  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-  		</div>
-  		<div class="card">
-  			<img src="img/earring4.jpg">
-  			<a href="earring4.html">HAPPY DIAMONDS ICONS BRACELET</a>
-  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-  		</div>
-  		<div class="card">
-  			<img src="img/earring5.jpg">
-  			<a href="earring5.html">IMPERIALE "LA VIE EN ROSE"</a>
-  			<p>STAINLESS STEEL AND AMETHYST LIMITED EDITION</p>
-  		</div>
-  	</div>
-  	<hr>
-  	<div class="inf">
-  		<a href="bracelet.html">BRACELETS</a>
-  		<h2>Chopard's bracelets match the style of countless women in order to reveal their individual beauty. Choose from a range of luxury bracelets that feature pure diamonds and precious stones, each embodying a blend of elegance and emotion, passion and joie de vivre.</h2>
-  	</div>
-  	<div class="bracelets">
-  		<div class="card">
-  			<img src="img/bracelet1.jpg">
-  			<a href="bracelet1.html">HAPPY DIAMONDS ICONS PENDANT</a>
-  			<p>18-CARAT WHITE GOLD AND NATURAL MOTHER-OF-PEARL</p>
-  		</div>
-  		<div class="card">
-  			<img src="img/bracelet2.jpg">
-  			<a href="bracelet2.html">HAPPY DIAMONDS ICONS RING</a>
-  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-  		</div>
-  		<div class="card">
-  			<img src="img/bracelet3.jpg">
-  			<a href="bracele3.html">HAPPY DIAMONDS ICONS EAR PINS</a>
-  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-  		</div>
-  		<div class="card">
-  			<img src="img/bracelet4.jpg">
-  			<a href="bracelet4.html">HAPPY DIAMONDS ICONS BRACELET</a>
-  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-  		</div>
-  		<div class="card">
-  			<img src="img/bracelet5.jpg">
-  			<a href="bracelet5.html">IMPERIALE "LA VIE EN ROSE"</a>
-  			<p>STAINLESS STEEL AND AMETHYST LIMITED EDITION</p>
-  		</div>
-  	</div>
-  	<hr>
-  	<div class="inf">
-  		<a href="pendant.html">NECKLACES AND PENDANTS</a>
-  		<h2>Token of luck, symbol of love, or statement of style - browse our exquisite pendants below and find your very own jewellery piece. From precious IMPERIALE pendants to an audacious Happy Diamonds piece, this selection of luxury jewellery will satisfy even the most demanding woman.</h2>
-  	</div>
-  	<div class="pendants">
-  		<div class="card">
-  			<img src="img/pendant1.jpg">
-  			<a href="pendant1.html">HAPPY DIAMONDS ICONS PENDANT</a>
-  			<p>18-CARAT WHITE GOLD AND NATURAL MOTHER-OF-PEARL</p>
-  		</div>
-  		<div class="card">
-  			<img src="img/pendant2.jpg">
-  			<a href="pendant2.html">HAPPY DIAMONDS ICONS RING</a>
-  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-  		</div>
-  		<div class="card">
-  			<img src="img/pendant3.jpg">
-  			<a href="pendant3.html">HAPPY DIAMONDS ICONS EAR PINS</a>
-  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-  		</div>
-  		<div class="card">
-  			<img src="img/pendant4.jpg">
-  			<a href="pendant4.html">HAPPY DIAMONDS ICONS BRACELET</a>
-  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-  		</div>
-  		<div class="card">
-  			<img src="img/pendant5.jpg">
-  			<a href="pendant5.html">IMPERIALE "LA VIE EN ROSE"</a>
-  			<p>STAINLESS STEEL AND AMETHYST LIMITED EDITION</p>
-  		</div>
+  	<div class="all">
+	  	<div class="last">
+	  		<div class="card">
+	  			<img src="img/pendant1.jpg">
+	  			<a href="pendant1.html">HAPPY DIAMONDS ICONS PENDANT</a>
+	  			<p>18-CARAT WHITE GOLD AND NATURAL MOTHER-OF-PEARL</p>
+	  		</div>
+	  		<div class="card">
+	  			<img src="img/ring1.jpg">
+	  			<a href="ring1.html">HAPPY DIAMONDS ICONS RING</a>
+	  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+	  		</div>
+	  		<div class="card">
+	  			<img src="img/earring1.jpg">
+	  			<a href="earring1.html">HAPPY DIAMONDS ICONS EAR PINS</a>
+	  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+	  		</div>
+	  		<div class="card">
+	  			<img src="img/bracelet1.jpg">
+	  			<a href="bracelet1.html">HAPPY DIAMONDS ICONS BRACELET</a>
+	  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+	  		</div>
+	  		<div class="card">
+	  			<img src="img/watch1.jpg">
+	  			<a href="watch1.html">IMPERIALE "LA VIE EN ROSE"</a>
+	  			<p>STAINLESS STEEL AND AMETHYST LIMITED EDITION</p>
+	  		</div>
+	  	</div>
+	  	<hr>
+	  	<div class="inf">
+	  		<a href = "ring.html">RINGS</a>
+	  		<h2>Our rings promise timeless elegance with a contemporary twist. Indulge in our selection of gold and diamond rings from various collections such as Chopardissimo, IMPERIALE or Happy Diamonds and find your very own favourite jewellery piece.</h2>
+	  	</div>
+	  	<div class="rings">
+	  		<div class="card">
+	  			<img src="img/ring1.jpg">
+	  			<a href="ring1.html">HAPPY DIAMONDS ICONS PENDANT</a>
+	  			<p>18-CARAT WHITE GOLD AND NATURAL MOTHER-OF-PEARL</p>
+	  		</div>
+	  		<div class="card">
+	  			<img src="img/ring2.jpg">
+	  			<a href="ring2.html">HAPPY DIAMONDS ICONS RING</a>
+	  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+	  		</div>
+	  		<div class="card">
+	  			<img src="img/ring3.jpg">
+	  			<a href="ring3.html">HAPPY DIAMONDS ICONS EAR PINS</a>
+	  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+	  		</div>
+	  		<div class="card">
+	  			<img src="img/ring4.jpg">
+	  			<a href="ring4.html">HAPPY DIAMONDS ICONS BRACELET</a>
+	  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+	  		</div>
+	  		<div class="card">
+	  			<img src="img/ring5.jpg">
+	  			<a href="ring5.html">IMPERIALE "LA VIE EN ROSE"</a>
+	  			<p>STAINLESS STEEL AND AMETHYST LIMITED EDITION</p>
+	  		</div>
+	  	</div>
+	  	<hr>
+	  	<div class="inf">
+	  		<a href="earring.html">EARRINGS</a>
+	  		<h2>From the tenderness of rose gold to the understated elegance of white gold, find below a selection of luxury jewellery that leaves no wish unfulfilled. Browse through Chopard's selection of prestigious earrings that come in different shapes and sizes to perfectly complement your style..<h2>
+	  	</div>
+	  	<div class="earrings">
+	  		<div class="card">
+	  			<img src="img/earring1.jpg">
+	  			<a href="earring1.html">HAPPY DIAMONDS ICONS PENDANT</a>
+	  			<p>18-CARAT WHITE GOLD AND NATURAL MOTHER-OF-PEARL</p>
+	  		</div>
+	  		<div class="card">
+	  			<img src="img/earring2.jpg">
+	  			<a href="earring2.html">HAPPY DIAMONDS ICONS RING</a>
+	  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+	  		</div>
+	  		<div class="card">
+	  			<img src="img/earring3.jpg">
+	  			<a href="earring3.html">HAPPY DIAMONDS ICONS EAR PINS</a>
+	  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+	  		</div>
+	  		<div class="card">
+	  			<img src="img/earring4.jpg">
+	  			<a href="earring4.html">HAPPY DIAMONDS ICONS BRACELET</a>
+	  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+	  		</div>
+	  		<div class="card">
+	  			<img src="img/earring5.jpg">
+	  			<a href="earring5.html">IMPERIALE "LA VIE EN ROSE"</a>
+	  			<p>STAINLESS STEEL AND AMETHYST LIMITED EDITION</p>
+	  		</div>
+	  	</div>
+	  	<hr>
+	  	<div class="inf">
+	  		<a href="bracelet.html">BRACELETS</a>
+	  		<h2>Chopard's bracelets match the style of countless women in order to reveal their individual beauty. Choose from a range of luxury bracelets that feature pure diamonds and precious stones, each embodying a blend of elegance and emotion, passion and joie de vivre.</h2>
+	  	</div>
+	  	<div class="bracelets">
+	  		<div class="card">
+	  			<img src="img/bracelet1.jpg">
+	  			<a href="bracelet1.html">HAPPY DIAMONDS ICONS PENDANT</a>
+	  			<p>18-CARAT WHITE GOLD AND NATURAL MOTHER-OF-PEARL</p>
+	  		</div>
+	  		<div class="card">
+	  			<img src="img/bracelet2.jpg">
+	  			<a href="bracelet2.html">HAPPY DIAMONDS ICONS RING</a>
+	  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+	  		</div>
+	  		<div class="card">
+	  			<img src="img/bracelet3.jpg">
+	  			<a href="bracele3.html">HAPPY DIAMONDS ICONS EAR PINS</a>
+	  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+	  		</div>
+	  		<div class="card">
+	  			<img src="img/bracelet4.jpg">
+	  			<a href="bracelet4.html">HAPPY DIAMONDS ICONS BRACELET</a>
+	  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+	  		</div>
+	  		<div class="card">
+	  			<img src="img/bracelet5.jpg">
+	  			<a href="bracelet5.html">IMPERIALE "LA VIE EN ROSE"</a>
+	  			<p>STAINLESS STEEL AND AMETHYST LIMITED EDITION</p>
+	  		</div>
+	  	</div>
+	  	<hr>
+	  	<div class="inf">
+	  		<a href="pendant.html">NECKLACES AND PENDANTS</a>
+	  		<h2>Token of luck, symbol of love, or statement of style - browse our exquisite pendants below and find your very own jewellery piece. From precious IMPERIALE pendants to an audacious Happy Diamonds piece, this selection of luxury jewellery will satisfy even the most demanding woman.</h2>
+	  	</div>
+	  	<div class="pendants">
+	  		<div class="card">
+	  			<img src="img/pendant1.jpg">
+	  			<a href="pendant1.html">HAPPY DIAMONDS ICONS PENDANT</a>
+	  			<p>18-CARAT WHITE GOLD AND NATURAL MOTHER-OF-PEARL</p>
+	  		</div>
+	  		<div class="card">
+	  			<img src="img/pendant2.jpg">
+	  			<a href="pendant2.html">HAPPY DIAMONDS ICONS RING</a>
+	  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+	  		</div>
+	  		<div class="card">
+	  			<img src="img/pendant3.jpg">
+	  			<a href="pendant3.html">HAPPY DIAMONDS ICONS EAR PINS</a>
+	  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+	  		</div>
+	  		<div class="card">
+	  			<img src="img/pendant4.jpg">
+	  			<a href="pendant4.html">HAPPY DIAMONDS ICONS BRACELET</a>
+	  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+	  		</div>
+	  		<div class="card">
+	  			<img src="img/pendant5.jpg">
+	  			<a href="pendant5.html">IMPERIALE "LA VIE EN ROSE"</a>
+	  			<p>STAINLESS STEEL AND AMETHYST LIMITED EDITION</p>
+	  		</div>
+	  	</div>
   	</div>
   	<footer>
   		<hr>
