--- a/project/bracelet1.html
+++ b/project/bracelet1.html
@@ -21,23 +21,25 @@
         <a href="pendant.html" >Necklaces</a>
       </div>
     </header>
-    <div class="body">
-      <div class="half">
-        <img class="bigimg" src="img/bracelet1.jpg">
-        <div class="littleimg">
-          <img src="img/bracelet11.jpg">
-          <img src="img/bracelet111.jpg">
+    <div class="boody">
+      <div class="body">
+        <div class="half">
+          <img class="bigimg" src="img/bracelet1.jpg">
+          <div class="littleimg">
+            <img src="img/bracelet11.jpg">
+            <img src="img/bracelet111.jpg">
+          </div>
         </div>
-      </div>
-      <div class="half_2">
-        <h1>HAPPY DIAMONDS ICONS RING</h1>
-        <p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-        <p>100000 KZT</p>
-        <h3>Description</h3>
-        <p>At the very heart of Chopard's women's jewelry collection, the Happy Diamonds Icons line is as unique as it is playful. Inspired by sparkling drops of water in a waterfall, the 3 freely moving diamonds held between two sapphire crystals on this new round-shaped ring in 18K white gold swirl and dance, creating a delicate and joyful cascade of light.</p>
-        <div class="take">
-          <p>Phone: 87021478298</p>
-          <a class="buy">Buy</a>
+        <div class="half_2">
+          <h1>HAPPY DIAMONDS ICONS RING</h1>
+          <p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+          <p>100000 KZT</p>
+          <h3>Description</h3>
+          <p>At the very heart of Chopard's women's jewelry collection, the Happy Diamonds Icons line is as unique as it is playful. Inspired by sparkling drops of water in a waterfall, the 3 freely moving diamonds held between two sapphire crystals on this new round-shaped ring in 18K white gold swirl and dance, creating a delicate and joyful cascade of light.</p>
+          <div class="take">
+            <p>Phone: 87021478298</p>
+            <a class="buy">Buy</a>
+          </div>
         </div>
       </div>
     </div>
