--- a/project/pendant.html
+++ b/project/pendant.html
@@ -1,177 +1,129 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+	<link rel="stylesheet" type="text/css" href="main.css">
+</head>
+<body>
+	<div class="wrapper">
+		<div class="content">
+			<div class="header">
+				<img class="logo" src="img/logo.png">
+				<a href="admin.html"><img class="prof" src="img/profile.png"></a>
+				<a href="add.html"><img class="add" src="img/add.png"></a>
+				<div class="menu">
+					<ul>
+						<li><a href="main.html">Main</a></li>
+						<li><a href="ring.html">Ring</a></li>
+						<li><a href="earring.html">Earring</a></li>
+						<li><a href="bracelet.html">Bracelet</a></li>
+						<li><a href="pendant.html">Pendant</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="all">
+				
+				<div class="inf">
+					<a href="pendant.html">Pendants</a>
+					<p>Our rings promise timeless elegance with a contemporary twist. Indulge in our selection of gold and diamond rings from various collections such as Chopardissimo, IMPERIALE or Happy Diamonds and find your very own favourite jewellery piece.</p>
+				</div>
+				<div class="cards">
+					<div class="card">
+						<img src="img/pendant1.jpg">
+						<a href="pendant1.html">HAPPY DIAMONDS ICONS RING</a>
+						<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+					</div>
+					<div class="card">
+						<img src="img/pendant2.jpg">
+						<a href="pendant1.html">HAPPY DIAMONDS ICONS RING</a>
+						<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+					</div>
+					<div class="card">
+						<img src="img/pendant3.jpg">
+						<a href="pendant1.html">HAPPY DIAMONDS ICONS RING</a>
+						<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+					</div>
+					<div class="card">
+						<img src="img/pendant4.jpg">
+						<a href="pendant1.html">HAPPY DIAMONDS ICONS RING</a>
+						<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+					</div>
+					<div class="card">
+						<img src="img/pendant5.jpg">
+						<a href="pendant1.html">HAPPY DIAMONDS ICONS RING</a>
+						<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+					</div>
+				</div>
+				<hr>
+				<div class="cards">
+					<div class="card">
+						<img src="img/pendant1.jpg">
+						<a href="pendant1.html">HAPPY DIAMONDS ICONS RING</a>
+						<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+					</div>
+					<div class="card">
+						<img src="img/pendant2.jpg">
+						<a href="pendant1.html">HAPPY DIAMONDS ICONS RING</a>
+						<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+					</div>
+					<div class="card">
+						<img src="img/pendant3.jpg">
+						<a href="pendant1.html">HAPPY DIAMONDS ICONS RING</a>
+						<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+					</div>
+					<div class="card">
+						<img src="img/pendant4.jpg">
+						<a href="pendant1.html">HAPPY DIAMONDS ICONS RING</a>
+						<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+					</div>
+					<div class="card">
+						<img src="img/pendant5.jpg">
+						<a href="pendant1.html">HAPPY DIAMONDS ICONS RING</a>
+						<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+					</div>
+				</div>
+				<hr>
+				<div class="cards">
+					<div class="card">
+						<img src="img/pendant1.jpg">
+						<a href="pendant1.html">HAPPY DIAMONDS ICONS RING</a>
+						<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+					</div>
+					<div class="card">
+						<img src="img/pendant2.jpg">
+						<a href="pendant1.html">HAPPY DIAMONDS ICONS RING</a>
+						<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+					</div>
+					<div class="card">
+						<img src="img/pendant3.jpg">
+						<a href="pendant1.html">HAPPY DIAMONDS ICONS RING</a>
+						<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+					</div>
+					<div class="card">
+						<img src="img/pendant4.jpg">
+						<a href="pendant1.html">HAPPY DIAMONDS ICONS RING</a>
+						<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+					</div>
+					<div class="card">
+						<img src="img/pendant5.jpg">
+						<a href="pendant1.html">HAPPY DIAMONDS ICONS RING</a>
+						<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
+					</div>
+				</div>
+				<hr>
+			</div>
+		</div>
+		<div class="footer">
+			<p>Find us on</p>
+			<div class="links">
+				<a href="https://www.facebook.com/"><img src="img/face.png"></a>
+				<a href="https://www.vk.com/"><img src="img/vk.png"></a>
+				<a href="https://www.instagram.com/"><img src="img/ins.png"></a>
+			</div>
+		</div>
+	</div>
 
-  <head>
-    <link rel="stylesheet" href="main.css">
-    <script src="main.js" defer></script>
-
-  </head>
-
-  <body>
-  	<header>
-  		<div class="f_head">
-  			<a href=""><img src="img/profile.png" class="profile"></a>
-  			<a href="add.html"><img src="img/add.png" class="add"></a>
-  		</div>
-  		<div class="h_img"><img src="img/logo.png"></div>
-  		<div class="menu">
-  			<a href="ring.html" >Rings</a>
-  			<a href="earring.html" >Earrings</a>
-  			<a href="bracelet.html" >Bracelets</a>
-  			<a href="pendant.html" >Necklaces</a>
-  		</div>
-  	</header>
-  	<div class="inf">
-  		<a href="pendant.html">NECKLACES AND PENDANTS</a>
-  		<h2>Token of luck, symbol of love, or statement of style - browse our exquisite pendants below and find your very own jewellery piece. From precious IMPERIALE pendants to an audacious Happy Diamonds piece, this selection of luxury jewellery will satisfy even the most demanding woman.</h2>
-  	</div>
-  	<div class="pendants">
-  		<div class="card">
-  			<img src="img/pendant1.jpg">
-  			<a href="pendant1.html">HAPPY DIAMONDS ICONS PENDANT</a>
-  			<p>18-CARAT WHITE GOLD AND NATURAL MOTHER-OF-PEARL</p>
-  		</div>
-  		<div class="card">
-  			<img src="img/pendant2.jpg">
-  			<a href="pendant2.html">HAPPY DIAMONDS ICONS RING</a>
-  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-  		</div>
-  		<div class="card">
-  			<img src="img/pendant3.jpg">
-  			<a href="pendant3.html">HAPPY DIAMONDS ICONS EAR PINS</a>
-  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-  		</div>
-  		<div class="card">
-  			<img src="img/pendant4.jpg">
-  			<a href="pendant4.html">HAPPY DIAMONDS ICONS BRACELET</a>
-  			<p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-  		</div>
-  		<div class="card">
-  			<img src="img/pendant5.jpg">
-  			<a href="pendant5.html">IMPERIALE "LA VIE EN ROSE"</a>
-  			<p>STAINLESS STEEL AND AMETHYST LIMITED EDITION</p>
-  		</div>
-  	</div>
-    <div class="pendants">
-      <div class="card">
-        <img src="img/pendant1.jpg">
-        <a href="pendant1.html">HAPPY DIAMONDS ICONS PENDANT</a>
-        <p>18-CARAT WHITE GOLD AND NATURAL MOTHER-OF-PEARL</p>
-      </div>
-      <div class="card">
-        <img src="img/pendant2.jpg">
-        <a href="pendant2.html">HAPPY DIAMONDS ICONS RING</a>
-        <p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-      </div>
-      <div class="card">
-        <img src="img/pendant3.jpg">
-        <a href="pendant3.html">HAPPY DIAMONDS ICONS EAR PINS</a>
-        <p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-      </div>
-      <div class="card">
-        <img src="img/pendant4.jpg">
-        <a href="pendant4.html">HAPPY DIAMONDS ICONS BRACELET</a>
-        <p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-      </div>
-      <div class="card">
-        <img src="img/pendant5.jpg">
-        <a href="pendant5.html">IMPERIALE "LA VIE EN ROSE"</a>
-        <p>STAINLESS STEEL AND AMETHYST LIMITED EDITION</p>
-      </div>
-    </div>
-    <div class="pendants">
-      <div class="card">
-        <img src="img/pendant1.jpg">
-        <a href="pendant1.html">HAPPY DIAMONDS ICONS PENDANT</a>
-        <p>18-CARAT WHITE GOLD AND NATURAL MOTHER-OF-PEARL</p>
-      </div>
-      <div class="card">
-        <img src="img/pendant2.jpg">
-        <a href="pendant2.html">HAPPY DIAMONDS ICONS RING</a>
-        <p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-      </div>
-      <div class="card">
-        <img src="img/pendant3.jpg">
-        <a href="pendant3.html">HAPPY DIAMONDS ICONS EAR PINS</a>
-        <p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-      </div>
-      <div class="card">
-        <img src="img/pendant4.jpg">
-        <a href="pendant4.html">HAPPY DIAMONDS ICONS BRACELET</a>
-        <p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-      </div>
-      <div class="card">
-        <img src="img/pendant5.jpg">
-        <a href="pendant5.html">IMPERIALE "LA VIE EN ROSE"</a>
-        <p>STAINLESS STEEL AND AMETHYST LIMITED EDITION</p>
-      </div>
-    </div>
-    <div class="pendants">
-      <div class="card">
-        <img src="img/pendant1.jpg">
-        <a href="pendant1.html">HAPPY DIAMONDS ICONS PENDANT</a>
-        <p>18-CARAT WHITE GOLD AND NATURAL MOTHER-OF-PEARL</p>
-      </div>
-      <div class="card">
-        <img src="img/pendant2.jpg">
-        <a href="pendant2.html">HAPPY DIAMONDS ICONS RING</a>
-        <p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-      </div>
-      <div class="card">
-        <img src="img/pendant3.jpg">
-        <a href="pendant3.html">HAPPY DIAMONDS ICONS EAR PINS</a>
-        <p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-      </div>
-      <div class="card">
-        <img src="img/pendant4.jpg">
-        <a href="pendant4.html">HAPPY DIAMONDS ICONS BRACELET</a>
-        <p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-      </div>
-      <div class="card">
-        <img src="img/pendant5.jpg">
-        <a href="pendant5.html">IMPERIALE "LA VIE EN ROSE"</a>
-        <p>STAINLESS STEEL AND AMETHYST LIMITED EDITION</p>
-      </div>
-    </div>
-    <div class="pendants">
-      <div class="card">
-        <img src="img/pendant1.jpg">
-        <a href="pendant1.html">HAPPY DIAMONDS ICONS PENDANT</a>
-        <p>18-CARAT WHITE GOLD AND NATURAL MOTHER-OF-PEARL</p>
-      </div>
-      <div class="card">
-        <img src="img/pendant2.jpg">
-        <a href="pendant2.html">HAPPY DIAMONDS ICONS RING</a>
-        <p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-      </div>
-      <div class="card">
-        <img src="img/pendant3.jpg">
-        <a href="pendant3.html">HAPPY DIAMONDS ICONS EAR PINS</a>
-        <p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-      </div>
-      <div class="card">
-        <img src="img/pendant4.jpg">
-        <a href="pendant4.html">HAPPY DIAMONDS ICONS BRACELET</a>
-        <p>18-CARAT WHITE GOLD AND DIAMONDS</p>
-      </div>
-      <div class="card">
-        <img src="img/pendant5.jpg">
-        <a href="pendant5.html">IMPERIALE "LA VIE EN ROSE"</a>
-        <p>STAINLESS STEEL AND AMETHYST LIMITED EDITION</p>
-      </div>
-    </div>
-  	<footer>
-  		<hr>
-  		<div>
-  			<h2>Find us on</h2>
-  			<div class="logos">
-	  			<a href="https://www.facebook.com/"><img src="img/face.png"></a>
-	  			<a href="https://vk.com"><img src="img/vk.png"></a>
-	  			<a href="https://www.instagram.com"><img src="img/ins.png"></a>
-  			</div>
-  		</div>
-  	</footer>
-
-  </body>
-
+	
+</body>
 </html>
