--- a/project/main.html
+++ b/project/main.html
@@ -9,9 +9,34 @@
 	<div class="wrapper">
 		<div class="content">
 			<div class="header">
-				<img class="logo" src="img/logo.png">
 				<a href="admin.html"><img class="prof" src="img/profile.png"></a>
 				<a href="add.html"><img class="add" src="img/add.png"></a>
+
+				<div class="slideshow-container">
+					<div class = "MySlides fade">
+						<img src="img/slide1.jpg" style="width: 100%">
+					</div>
+
+					<div class = "MySlides fade">
+						<img src="img/slide2.jpg" style="width: 100%">
+					</div>
+
+					<div class = "MySlides fade">
+						<img src="img/slide3.jpg" style="width: 100%">
+					</div>
+					<a class="prev" onclick="plusSlides(-1)">&#10094</a>
+					<a class="next" onclick="plusSlides(1)">&#10095</a>
+
+					<div style="text-align: center;">
+						<span class="dot dots" onclick="currentSlide(1)"></span>
+						<span class="dot dotss" onclick="currentSlide(2)"></span>
+						<span class="dot dotsss" onclick="currentSlide(3)"></span>
+						
+					</div>
+				</div>	
+
+				<br>
+
 				<div class="menu">
 					<ul>
 						<li><a href="main.html">Main</a></li>
@@ -192,5 +217,6 @@
 	</div>
 
 	
+<script type="text/javascript" src="main-script.js" defer></script>
 </body>
 </html>
